# kisak

./: .gitignore  CMakeLists.txt  CMakeSettings.json
data/: modules.json
script_linux/: gdb-deject.sh  gdb-inject.sh
src/: CMakeLists.txt  cxxutil.hpp  gamedata.hpp  gamemodule.cpp  gamemodule.hpp  iface.cpp  iface.hpp  kconfig.hpp.in  kdebug.cpp  kdebug.hpp  kisak.cpp  kisak.hpp  ui.cpp  ui.hpp
src/graphics/: CMakeLists.txt  graphics.cpp  graphics.hpp  graphics_linux.cpp  graphics_win.cpp  imgui_impl_source.cpp  imgui_impl_source.hpp
src/graphics/imgui/: CMakeLists.txt
src/imgui/: CMakeLists.txt
src/kisak/: CMakeLists.txt  gamelib.cpp  gamelib.hpp  iface.cpp  iface.hpp  kdebug.cpp  kdebug.hpp  kisak.cpp
src/kisak/graphics/: CMakeLists.txt  graphics.cpp  graphics.hpp  graphics_linux.cpp
src/kisak/linux/: CMakeLists.txt  gamelib_linux.cpp
src/kisak/main/: CMakeLists.txt  main_win.cpp
src/kisak/windows/: CMakeLists.txt  gamelib_win.cpp
src/main/: CMakeLists.txt  main_linux.cpp  main_win.cpp
src/mem/: CMakeLists.txt  hook.cpp  hook.hpp  module.cpp  module.hpp  module_linux.cpp  module_win.cpp  vtable.hpp
src/mem/include/mem/: hook.hpp  module.hpp
src/sdk/: sdk.hpp
src/sdk/2013/: analog_code.hpp  app_system.hpp  button_code.hpp  engine_client.hpp  input_system.hpp  interface.hpp
src/sdk/include/sdk/: engine_client.hpp  interface.hpp
src/sdk/util/: impl.hpp
src/tool/: injector.c
